Build 205

Application Changes:
- Added a new improvement type - actiondicepool - to support specific Actions receiving dicepool bonuses. Currently only Threading is supported by this.
- Fixed behaviour of Exotic weapons to prevent them from from using the first exotic skill found.
- Exposed the selection of AI programs to the main RequirementsMet method. Prevents issues with programs not being translated, offends me slightly less. Fixes #3350
- Fixed processing of FixedValues on the Select Gear window.
- Refactored string processing method for Gear Ratings into a single method. Allows MinRating, MaxRating, MatrixAttributes and TotalBonusMatrixBoxes (for LivingPersona only) to use complex strings such as {Parent DeviceRating}. Fixes #3360
- Foxed some behaviour in creation of packs to properly allow creatio nof lifestyles.
- Fixed behaviour of child Cyberware with the AddToParentESS flag not properly adding their essence cost to the parent.
- Fixed issues with the subsystem and gear limitations for Cyberware and Gear that prevented categories from loading properly.
- Capped cost multipliers for lifestyles to -0%. 
- Added the 'lifestyle' attribute to the lifestylecost and basiclifestylecost improvement types. This supports limiting the bonus to a specific Lifestyle type, such as Low or Squatter. 
- ValueOf has been altered slightly to allow for selecting objects that are either of a given ImprovedName, or don't have one, in support of the above changes. Defaults to existing behaviour.
- Implemented a basic upgrade mechanism in career mode for cyberware, accessed through a submenu of the Delete Cyberware button.
- Added code to the SelectQuality form to show karma discounts if the quality qualifies for it.
- Fixed a crash when loading plugins, if plugins cannot be found. 
- Altered the Mentor Spirit selection window to hide list choices that can't be taken due to Magician or Adept requirements.